# lmf

./: .gitignore  README.md  pyproject.toml
configs/: block_hybrid_gear_v4.yaml  bounded_hybrid_gear.yaml  bounded_hybrid_gear_ablations.yaml  bounded_hybrid_gear_block_additive.yaml  bounded_hybrid_gear_block_bank_router.yaml  bounded_hybrid_gear_block_selective_film.yaml  bounded_hybrid_gear_block_selective_film_w64.yaml  gear_bank_router_v43.yaml  gear_transformer.yaml  generative_mecm_iteration.yaml  multigear_baseline_models.yaml  multigear_enhanced.yaml  multigear_generative_comparison.yaml  multigear_native_models.yaml  multigear_pretokenized.yaml  multigear_recommended.yaml  opet_baseline.yaml  pure_parallel_gear.yaml  pure_parallel_gear_protocol.json  pure_parallel_gear_v3.yaml  pure_parallel_gear_v3_ablations.yaml  rhca_v4.yaml  selective_hybrid_gear_v42.yaml  selective_hybrid_gear_v44_w64.yaml  spectral_memory.yaml  spectral_memory_ablations.yaml  spt_bench.yaml  transformer_baseline.yaml
docs/: RESEARCH_NOTES.md  block_hybrid_gear_v4_report.md  gear_transformer_v2_mechanism.md  multigear_three_architectures.md  multigear_tokenizer_research.md  pure_parallel_gear.md  pure_parallel_gear_copy_head_design.md  pure_parallel_gear_fast_weight_memory_design.md  pure_parallel_gear_remaining_program_report.md  pure_parallel_gear_v3.md  pure_parallel_gear_v3_implementation_report.md  simplified_gear_transformer_v1.md
scripts/: __init__.py  ablate_gear_transformer.py  benchmark_gear_transformer_v5.py  benchmark_multigear_compositional_init.py  evaluate.py  generate.py  (+27 more)
(+188 files in other folders)
